force-app/main/default/objects/NICE_Interaction__c/NICE_Interaction__c.object-meta.xml
<CustomObject>
    <description>Agent&apos;s outbound interaction</description>
    <label>NICE Interaction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NICE Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NICE Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>