force-app/main/default/objects/NICE_Interaction__c/fields/Call_Duration_in_Sec__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_in_Sec__c</fullName>
    <description>Nice Call Duration in Sec</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Duration in Sec</label>
    <length>18</length>
    <type>Text</type>
</CustomField>