force-app/main/default/objects/NICE_Interaction__c/fields/Call_End_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_End_Date_and_Time__c</fullName>
    <description>Call End Date and Time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call End Date and Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>