force-app/main/default/objects/NICE_Interaction__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <description>Nice Contact ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>