force-app/main/default/objects/NICE_Interaction__c/fields/DNIS__c.field-meta.xml
<CustomField>
    <fullName>DNIS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DNIS</label>
    <type>Phone</type>
</CustomField>