force-app/main/default/objects/NICE_Interaction__c/fields/Processing_State__c.field-meta.xml
<CustomField>
    <fullName>Processing_State__c</fullName>
    <description>Processing state for the nice interaction record. Indicates whether the updated details on the record have been successfully transmitted.</description>
    <inlineHelpText>Processing state for the nice interaction record. Indicates whether the updated details on the record have been successfully transmitted.</inlineHelpText>
    <label>Processing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>